test/invalid/range_non_int_arg.py
# range() with non-int argument
def main() -> None:
    r = range(True)  # range() arguments must be int
